# scientific_python

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  convert_to_md_key.py  docker-compose.yml  files.txt  requirements.txt  setup.py  virtualenv_activation.sh
doc/: course_abstract.docx
jupyter_notebooks/17.10.06/: numpy_basics.html  open_function.html  open_function.ipynb  tmp.txt
misc/book/: convert_to_md.py  convert_to_md_function.py  convert_to_md_key.py  converter.py  functions.md  generators.md  py_format.md  py_to_md.py  sequences.md
misc/jupyter_notebooks/17.10.06/: numpy_basics.ipynb
misc/jupyter_notebooks/17.10.13/: numpy_table.ipynb  (+1 more)
misc/sample_project/: LICENSE  requirements.txt  setup.cfg  setup.py
misc/sample_project/ser/: __init__.py  __main__.py  snake.py
misc/sample_project/test/: test.py  test_ser.py
misc/share_jupyter/: docker-compose.yml
scientific_python/: example.py
scientific_python/a_intro/: __init__.py  basics.py  intro.py  sequences.py  strings.py  strings_f_prefix.py  x_exceptions.py
scientific_python/b_modules/: __init__.py  functions.py  functions_keyword_only.py  functions_packing_unpacking.py  generators.py  load_module.py  simple_module.py  utils.py
scientific_python/c_numpy/: arrays.py  multidim_arrays.py
scientific_python/d_scipy/: __init__.py  integrate.py  interpolate.py  optimize.py  utils.py
scientific_python/e_testing/: __init__.py  doctests.py  unittests.py
scientific_python/f_speed/: __init__.py  compilers.py  contfrac.py  cy_contfrac.pyx
src/: cy_contfrac.pyx  erf.pyx
(+121 files in other folders)
