[metadata]
name = serpens
version = 0.0.2
author = Konstantin Malanchev
author_email = 'malanchev@physics.msu.ru'
description = Stellar snakes
long_description = file: README.md
url = 'http://phys.msu.ru'
license = MIT
keywords = sample, science, astrophysics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    scipy>=1.0
    matplotlib>=2.0,<3.0
scripts =
    bin/serpens

[options.entry_points]
console_scripts =
    issnake = ser.snake:main
gui_scripts =
    plotsnake = ser.snake:plot

[options.packages.find]
exclude = 
    test
